<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.DetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- CATEGORY -->
            <TextView
                android:id="@+id/label_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/fab_margin"

                android:text="@string/label_category" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_category"
                android:text="@string/default_category" />

            <!-- TITLE -->
            <TextView
                android:id="@+id/label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/category"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_title"
                android:text="@string/default_title" />

            <!-- URL -->
            <TextView
                android:id="@+id/label_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_url" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_url"
                android:text="@string/default_url" />

            <!-- USER -->
            <TextView
                android:id="@+id/label_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/url"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_url" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_user"
                android:text="@string/default_user" />

            <TextView
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/user"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_password"
                android:text="@string/default_password" />

            <ImageView
                android:id="@+id/button_show_value"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                app:layout_constraintTop_toBottomOf="@id/value"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@android:drawable/btn_plus"
                android:contentDescription="@string/label_show_password"/>

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/button_show_value"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_description" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_description"
                android:inputType="textMultiLine"
                android:lines="8"
                android:minLines="6"
                android:gravity="top|start"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:text="@string/default_description" />


            <TextView
                android:id="@+id/label_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/description"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_created" />

            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_created"
                android:text="@string/default_created" />

            <TextView
                android:id="@+id/label_modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/created"
                android:layout_margin="@dimen/fab_margin"
                android:text="@string/label_modified" />

            <TextView
                android:id="@+id/modified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_modified"
                android:text="@string/default_modified" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>