<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.details.EditDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- TITLE -->
            <TextView
                android:id="@+id/label_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/label_title"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_title"
                android:text="@string/default_title"
                android:textSize="@dimen/normal_text" />

            <!-- URL -->
            <TextView
                android:id="@+id/label_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:text="@string/label_url"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_url"
                android:text="@string/default_url"
                android:textSize="@dimen/normal_text" />

            <!-- USER -->
            <TextView
                android:id="@+id/label_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/url"
                android:text="@string/label_user"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_user"
                android:text="@string/default_user"
                android:textSize="@dimen/normal_text" />

            <!-- PASSWORD -->
            <TextView
                android:id="@+id/label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/user"
                android:text="@string/label_user"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/image_button_size"
                app:layout_constraintTop_toBottomOf="@id/label_password"
                android:text="@string/default_password"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_plain_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/password"
                android:text="@string/label_display_plain_text" />

            <ImageView
                android:id="@+id/button_show_password"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                app:layout_constraintBottom_toBottomOf="@id/password"
                app:layout_constraintTop_toTopOf="@id/password"
                app:layout_constraintStart_toEndOf="@id/password"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@android:drawable/btn_star"
                android:contentDescription="@string/label_show_password"/>

            <!-- DESCRIPTION -->

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/checkbox_plain_text"
                android:text="@string/label_description"
                android:textSize="@dimen/small_text" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="11"
                android:lines="11"
                android:layout_marginHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toBottomOf="@id/label_description"
                android:scrollbars="vertical"
                android:text="@string/default_description"
                android:textSize="@dimen/normal_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>