<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.stho.isee.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_list"
            app:destination="@id/nav_list" />
    </fragment>

    <fragment
        android:id="@+id/nav_list"
        android:name="com.stho.isee.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_nav_list_to_nav_view_details"
            app:destination="@id/nav_view_details" />
        <argument
            android:name="CATEGORY"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_view_details"
        android:name="com.stho.isee.ui.details.ViewDetailsFragment"
        android:label="@string/menu_view_details"
        tools:layout="@layout/fragment_view_details" >
        <argument
            android:name="ID"
            app:argType="long"
            android:defaultValue="0L" />
        <action
            android:id="@+id/action_nav_view_details_to_nav_edit_details"
            app:destination="@id/nav_edit_details" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_details"
        android:name="com.stho.isee.ui.details.EditDetailsFragment"
        android:label="@string/menu_edit_details"
        tools:layout="@layout/fragment_edit_details">
        <argument
            android:name="ID"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>


    <action android:id="@+id/action_global_nav_view_details" app:destination="@id/nav_view_details"/>
    <action android:id="@+id/action_global_nav_edit_details" app:destination="@id/nav_edit_details"/>

</navigation>