<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_entry_size"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/default_title" />

    <TextView
        android:id="@+id/created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:text="@string/default_date" />

    <ImageView
        android:id="@+id/button_next"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:alpha="0.3"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/label_button_next" />

</androidx.constraintlayout.widget.ConstraintLayout>